.solutions/todolist-istio/todobackend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todobackend
  namespace: todolist-istio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todobackend
  template:
    metadata:
      name: todobackend
      labels:
        app: todobackend
    spec:
      containers:
      - name: todobackend
        image: novatec/technologyconsulting-containerexerciseapp-todobackend:v0.1
      restartPolicy: Always
