.solutions/todolist-istio/todoui-versioned-0-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoui-0-2
  namespace: todolist-istio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoui
      version: "0.2"
  template:
    metadata:
      name: todoui
      labels:
        app: todoui
        tier: frontend
        version: "0.2"
    spec:
      containers:
      - name: todoui
        image: novatec/technologyconsulting-containerexerciseapp-todoui:v0.2
      restartPolicy: Always
