.solutions/todolist-istio/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresdb
  namespace: todolist-istio
spec:
  type: ClusterIP
  ports:
  - port: 5432
  selector:
    app: postgresdb
