.solutions/todolist-istio/todobackend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todobackend
  namespace: todolist-istio
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: todobackend
