.solutions/todolist-istio/todoui-istio-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: todoui
spec:
  host: todoui.todolist-istio.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v0-2
    labels:
      app: todoui
      version: "0.2"
  - name: v0-3
    labels:
      app: todoui
      version: "0.3"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todoui
spec:
  hosts:
  - "todolist-istio.todo.app.20.82.84.66.nip.io"
  gateways:
  - todoui
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: todoui.todolist-istio.svc.cluster.local
        subset: v0-2
        port:
          number: 8090
