.solutions/todolist-istio/todoui-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: todoui
  namespace: todolist-istio
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "todolist-istio.todo.app.20.82.84.66.nip.io"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "todolist-istio.todo.app.20.82.84.66.nip.io"
    tls:
      mode: SIMPLE
      minProtocolVersion: TLSV1_2
      credentialName: todolist-istio.todo.app-tls
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todoui
  namespace: todolist-istio
spec:
  hosts:
  - "todolist-istio.todo.app.20.82.84.66.nip.io"
  gateways:
  - todoui
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: todoui.todolist-istio.svc.cluster.local
        port:
          number: 8090
